# bevy_xtemplate

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  cargo-generate.toml  index.html  post_script.rhai
.github/workflows/: rust.yml
apple/: Makefile
apple/crate_name.xcodeproj/: project.pbxproj
apple/qoncealed.xcodeproj/: project.pbxproj
apple/{{crate_name}}.xcodeproj/: project.pbxproj
src/: lib.rs  main.rs
