[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]

[dependencies.bevy]
version = "0.7"
default-features = false
{% if audio_enabled %}
features = ["render", "bevy_winit", "png", "vorbis", "bevy_audio"]
{% else %}
features = ["render", "bevy_winit", "png"]
{% endif %}

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["x11"]
{% if wasm_resize_enabled %}
# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"
{% endif %}
{% if optimizations_enabled %}
# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
{% endif %}
{% if android_enabled %}
[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
assets = "assets"
resources = "assets/res"

[package.metadata.android.sdk]
target_sdk_version = 29
min_sdk_version = 16

[package.metadata.android.application]
debuggable = true
icon = "@mipmap/icon"

[package.metadata.android.application.activity]
orientation = "portrait"
{% endif %}
